- created .gitignore file and added __pycache__ folder in it to ignore those files - created report folder in sale_ept module and in that created two xml files for generating the sale order report - created xml files to generate stock picking report - created stock picking py file to write custom logic to generate custom report, in which I inherited _get_report_values() method - created init file to import the abstract model

--- a/sale_ept/report/sale_order_report.xml
+++ b/sale_ept/report/sale_order_report.xml
@@ -4,7 +4,7 @@
     <record id="action_report_sale_order_ept4" model="ir.actions.report">
         <field name="name">Quotation / Order</field>
         <field name="model">sale.order.ept4</field>
-        <field name="report_type">qweb-html</field>
+        <field name="report_type">qweb-pdf</field>
         <field name="report_name">sale_ept.report_sale_order_ept4</field>
         <field name="print_report_name">'Report - %s' % (object.name)</field>
         <field name="binding_model_id" ref="model_sale_order_ept4"/>
