[ADD] sale_order_extended: view file created for displaying tree view of sale.order.line
order_lines_views.xml file created to display the tree view of records of sale.order.line, only those records which are not in
cancel or done state.

[MOD] sale_order_extended: added button in sale order and created method in sale.order and added xml file in manifest

In sale_order.py file added a method to filter the sale.order.line records which are in the opened sale order and whose state should not be
done or cancel. In sale_order.xml file added a button-box to display the sale.order.line records.

--- a/sale_order_extended/views/sale_order.xml
+++ b/sale_order_extended/views/sale_order.xml
@@ -21,6 +21,9 @@
                 <field name="profit_value"/>
                 <field name="profit_margin"/>
             </field>
+            <xpath expr="//sheet//div[@name='button_box']" position="inside">
+                <button name="get_order_lines" string="Order Lines" type="object" icon="fa-exchange"/>
+            </xpath>
         </field>
     </record>
 </odoo>
