[MOD] sale_order_extended : inherited filter of sale order and added a filter and defined a search method in sale order
Inherited filter of sale order and added a method in sale order for filter only that records of sale order of which pickings are either
in done state or cancel state.

[FIX] sale_order_extended: when product template is changed the varients of that template shoud be auto added in sale order line

There is a many2many field named product template in sale order, when the template is changed then its variants should be automatically
be added in sale order line. Was getting singleton error in product which is fixed now.

--- a/sale_order_extended/views/sale_order.xml
+++ b/sale_order_extended/views/sale_order.xml
@@ -22,7 +22,23 @@
                 <field name="profit_margin"/>
             </field>
             <xpath expr="//sheet//div[@name='button_box']" position="inside">
-                <button name="get_order_lines" string="Order Lines" type="object" icon="fa-exchange"/>
+                <button name="get_order_lines" string="Order Lines" type="object"
+                        icon="fa-exchange"/>
+            </xpath>
+            <field name="sale_order_template_id" position="after">
+                <field name="is_all_picking_completed"/>
+            </field>
+        </field>
+    </record>
+
+    <record id="view_sale_order_extended_search" model="ir.ui.view">
+        <field name="name">view.sale.order.extended.search</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.view_sales_order_filter"/>
+        <field name="arch" type="xml">
+            <xpath expr="//search//filter[@name='my_sale_orders_filter']" position="before">
+                <filter name="filter_is_all_picking_completed" string="Completed picking"
+                        domain="[('is_all_picking_completed','=',True)]"/>
             </xpath>
         </field>
     </record>
